@@ -3,15 +3,20 @@
             server="{{target}}"
             serverport="{{port}}"
             mode="{{mode}}"
+        {%- if dynamic_key %}
+            key="{{template_id}}"
+            DynaKey="on"
+        {%- else %}
             key="{{key}}"
+        {%- endif %}
             ServerPassword="{{pwd}}"
-            Template="{{ out_template }}_redis"
+            Template="{{ out_template }}_json"
             queue.type="LinkedList"
             queue.size="{{queue_size}}"
             queue.dequeuebatchsize="{{dequeue_size}}"
-            {%- if enable_retry %}
+    {%- if enable_retry %}
             action.ResumeRetryCount = "-1"
-            {%- if enable_disk_assist %}
+        {%- if enable_disk_assist %}
             queue.highWatermark="{{high_watermark}}"
             queue.lowWatermark="{{low_watermark}}"
             queue.spoolDirectory="/var/tmp"
@@ -20,6 +25,6 @@
             queue.maxDiskSpace="{{max_disk_space}}m"
             queue.checkpointInterval="128"
             queue.saveOnShutdown="on"
-            {%- endif -%} {# if enable_disk_assist #}
-            {%- endif -%} {# if enable_retry #}
+        {%- endif -%} {# if enable_disk_assist #}
+    {%- endif -%} {# if enable_retry #}
             )
