@@ -111,6 +111,17 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
+                    <label class="col-sm-4 control-label">{{form.dynamic_key.label}}</label>
+                    <div class="col-sm-5">
+                      {{form.dynamic_key}}
+                      {{form.dynamic_key.errors|safe}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
                     <label class="col-sm-4 control-label">{% trans "Password" %}</label>
                     <div class="col-sm-5">
                       {{form.pwd}}
