@@ -66,7 +66,7 @@
             key="darwin_redis_key"
             dynakey="on"
             expiration="10"
-            template="{{frontend.ruleset}}_redis"
+            template="{{frontend.ruleset}}_json"
             action.resumeRetryCount="3"
             action.resumeInterval="1")
     }
