@@ -12,7 +12,7 @@ template(name="generic_json" type="list") {
     constant(value="\n")
 }
 
-template(name="generic_json_redis" type="list") {
+template(name="generic_json_json" type="list") {
     constant(value="{")
     property(outname="time" name="timestamp" format="jsonf")  constant(value=",")
     constant(outname="appliance_name" value="{{ node.name }}" format="jsonf")  constant(value=",")
