@@ -24,7 +24,7 @@ template(name="pstats" type="list") {
     constant(value="\n")
 }
 
-template(name="pstats_redis" type="list") {
+template(name="pstats_json" type="list") {
 	constant(value="{\"stat\":")
 	property(name="msg")
 	constant(value=",")
